--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vue/cli": "^5.0.8",
     "bootstrap": "^5.2.1",
     "core-js": "^3.25.1",
+    "json-server": "^0.17.0",
     "vue": "^2.6.14",
     "vue-loader": "^17.0.0",
     "vue-router": "^3.5.1",
