--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "@vue/cli": "^5.0.8",
     "bootstrap": "^5.2.1",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.25.1",
     "json-server": "^0.17.0",
-    "vue": "^2.6.14",
+    "vue": "^2.7.10",
     "vue-loader": "^17.0.0",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
