--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/vue-fontawesome": "^2.0.8",
     "@vue/cli": "^5.0.8",
+    "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.25.1",
     "json-server": "^0.17.0",
     "vue": "^2.7.10",
+    "vue-axios": "^3.4.1",
     "vue-loader": "^17.0.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
