--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.25.1",
     "json-server": "^0.4.2",
+    "quill-image-resize": "^3.0.9",
     "vue": "^2.7.10",
     "vue-axios": "^3.4.1",
     "vue-loader": "^17.0.0",
     "vue-router": "^3.5.1",
     "vue-youtube": "^1.4.0",
+    "vue2-editor": "^2.10.3",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3"
   },
