--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.25.1",
     "json-server": "^0.4.2",
-    "quill-image-resize": "^3.0.9",
+    "quill-image-drop-module": "^1.0.3",
+    "quill-image-resize-module": "^3.0.0",
+    "quill-image-resize-vue": "^1.0.4",
     "vue": "^2.7.10",
     "vue-axios": "^3.4.1",
     "vue-loader": "^17.0.0",
