--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "vue": "^2.7.10",
     "vue-axios": "^3.4.1",
     "vue-loader": "^17.0.0",
-    "vue-router": "^3.5.1",
+    "vue-router": "^3.6.5",
+    "vue-simple-suggest": "^1.11.2",
     "vue-youtube": "^1.4.0",
     "vue2-editor": "^2.10.3",
     "vuex": "^3.6.2",
@@ -41,7 +42,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
-    "sass-loader": "^12.0.0",
+    "sass-loader": "^12.6.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
