--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue": "^2.7.10",
     "vue-axios": "^3.4.1",
     "vue-loader": "^17.0.0",
+    "vue-recaptcha": "^2.0.3",
     "vue-router": "^3.6.5",
     "vue-simple-suggest": "^1.11.2",
     "vue-youtube": "^1.4.0",
