--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue-youtube": "^1.4.0",
     "vue2-editor": "^2.10.3",
     "vuex": "^3.6.2",
-    "vuex-persist": "^3.1.3"
+    "vuex-persist": "^3.1.3",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
