--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.25.1",
     "json-server": "^0.17.0",
+    "lorem-ipsum": "^2.0.8",
     "quill-image-drop-module": "^1.0.3",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-vue": "^1.0.4",
