--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "vue-simple-suggest": "^1.11.2",
     "vue-youtube": "^1.4.0",
     "vue2-editor": "^1.0.1",
+    "vuejs-paginate": "^2.1.0",
     "vuex": "^3.6.2",
     "vuex-persist": "^3.1.3",
     "vuex-persistedstate": "^4.1.0"
